src/main/java/com/example/geoserver/error/ogc/StyleServiceNotFoundException.java
package com.example.geoserver.error.ogc;public class StyleServiceNotFoundException {
}
